Revert "fix: handle additional width from scrollbar"
This reverts commit d202d10a8ee137da17c65dbb1d127a7b46566b4f.

--- a/frappe/public/scss/desk/desktop.scss
+++ b/frappe/public/scss/desk/desktop.scss
@@ -759,17 +759,11 @@ body {
 
 [data-page-route="Workspaces"] {
 	@media (min-width: map-get($grid-breakpoints, "lg")) {
-		.page-actions {
-			scrollbar-gutter: stable;
-			overflow: auto;
-			height: calc(var(--btn-height) + 2px);
-		}
 		.layout-main {
 			height: calc(100vh - var(--navbar-height) - var(--page-head-height) - 5px);
 			.layout-side-section, .layout-main-section-wrapper {
 				height: 100%;
 				overflow-y: auto;
-				scrollbar-gutter: stable;
 				scrollbar-color: var(--gray-200) transparent;
 				[data-theme="dark"] & {
 					scrollbar-color: var(--gray-800) transparent;
